--- a/index.html
+++ b/index.html
@@ -493,7 +493,8 @@
 						</div>
 					</div>
 				</div><!-- Container /- -->
-			</div><!-- Welcome Section /- -->
+			</div>
+			<!-- Welcome Section /- -->
 			
 			<!-- Gallery Section -->
 			<div id="gallery-section" class="gallery-section container-fluid no-left-padding no-right-padding">
